--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-loggers></app-loggers>
+<!--<button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>Item 1</button>
+  <button mat-menu-item>Item 2</button>
+</mat-menu>-->
+<app-header></app-header>
+<mat-card class="demo-panel">
+    <router-outlet></router-outlet>
+</mat-card>
