--- a/src/app/loggers/loggers.component.html
+++ b/src/app/loggers/loggers.component.html
@@ -1,1 +1,2 @@
-<button type="button" class="btn btn-primary">Primary</button>
+
+<button mat-raised-button color="primary" (click)= "selectEvent()">logger</button>
