--- a/src/app/loggers/loggers.component.html
+++ b/src/app/loggers/loggers.component.html
@@ -1,2 +1,5 @@
 
-<button mat-raised-button color="primary" (click)= "selectEvent()">logger</button>
+<h3>Logger</h3>
+<div class="example-button-row">
+    <button mat-raised-button color="primary" (click)= "selectEvent()">logger</button>
+</div>
