--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 
 /*@import '~bootstrap/dist/css/bootstrap.min.css';*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('//fonts.googleapis.com/icon?family=Material+Icons');
+
+/**@import '~bootstrap/dist/css/bootstrap.min.css';*/
