--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,18 +2,67 @@
     width: 100%;
     height: 300px;
     border: 1px solid rgba(111, 111, 111, 0.50);
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
 }
-  
+
 .example-sidenav-content {
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
-  
+
 .example-sidenav {
     padding: 20px;
+    overflow-x: hidden;
 }
+
 .demo-panel {
     margin: 10px;
+}
+
+.example-container {
+    width: auto;
+    height: 600px;
+    margin: 10px;
+    /*border: 1px solid #555;*/
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.cursor-art {
+    border: 1px;
+    cursor: pointer;
+}
+
+.container {
+    width: 150px;
+    height: 600px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0.1px;
+}
+
+.example-small-box,
+.example-large-box {
+    display: flex;
+    /*align-items: center;
+  justify-content: center;*/
+    margin: 16px;
+    padding: 16px;
+    border-radius: 8px;
+}
+
+.example-large-box {
+    height: 490px;
+}
+
+.mat-tab-group {
+    margin-bottom: 48px;
 }
